<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvMascota"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mCardView"
        android:layout_width="376dp"
        android:layout_height="247dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="99dp"
            android:layout_height="112dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-125dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_bernardo" />

        <ImageView
            android:id="@+id/imgLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_bone" />

        <TextView
            android:id="@+id/tvNombreCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:text="@string/nombre"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIdentificacionCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="65dp"
            android:text="@string/id"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRazaCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="110dp"
            android:text="@string/raza"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="175dp"
            android:text="@string/plike"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="290dp"
            android:layout_marginTop="160dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/ic_bone_yellow" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>